Fixed button appearance on iOS.

--- a/lunchbreak/frontend/scss/elements/_input.scss
+++ b/lunchbreak/frontend/scss/elements/_input.scss
@@ -76,6 +76,8 @@
     cursor: pointer;
     color: white;
     text-align: center;
+    -webkit-appearance: none;
+    -moz-appearance: none;
 
     &:visited {
         color: white;
